deleting slate theme

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,10 @@
       <div id="window-content">
         <main>
             
-  <h3 id="marco-antonio-pérez-neira">Marco Antonio Pérez Neira</h3>
-<p>Fourth year software engineer <strong>student</strong> at Universidad Complutense de Madrid</p>
-<p>Currently learning golang and anything web related.</p>
+  <p>Hi! I&rsquo;m <strong>Marco Antonio</strong> and I am a 4th year software engineer <strong>student</strong> at Universidad Complutense de Madrid.</p>
+<p>I’m passionate about <strong>web development, backend systems, and open-source software</strong>.
+Currently, I’m learning <strong>Go (Golang)</strong> and deepening my knowledge of <strong>modern web technologies</strong>.</p>
+<p>Feel free to connect with me on <a href="https://www.linkedin.com/in/marco-antonio-p%C3%A9rez-neira-562b42342/">LinkedIn</a> or <a href="https://www.linkedin.com/in/marco-antonio-p%C3%A9rez-neira-562b42342/">X/Twitter</a>.</p>
 
   
 
