--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width">
 <title>DCCXXV.DEV</title>
 
-      <link rel="stylesheet" href="/css/main.min.4272159c48fd1fffad8591cdbca0f1ec8bcea2ce963280ecec55214b5ddac962.css" integrity="sha256-QnIVnEj9H/&#43;thZHNvKDx7IvOos6WMoDs7FUhS13ayWI=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/css/main.min.cadfdcf834ca1166f155a4dedf3fcdba9c0808f3c4f991b911dc1f21721f2d5c.css" integrity="sha256-yt/c&#43;DTKEWbxVaTe3z/NupwICPPE&#43;ZG5EdwfIXIfLVw=" crossorigin="anonymous">
 
 
         <script src="/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js" integrity="sha256-I80MfYNyY7nq65buLZzPopadqj&#43;gD6HB/ocBqbhyUaE=" crossorigin="anonymous"></script>
@@ -37,8 +37,29 @@
         <main>
             
   <p>Hi! I&rsquo;m <strong>Marco Antonio</strong> and I am a 4th year software engineer <strong>student</strong> at Universidad Complutense de Madrid.</p>
-<p>I’m passionate about <strong>web development, backend systems, and open-source software</strong>.
+<p>I’m passionate about <strong>web development</strong>, <strong>backend systems</strong> and <strong>open-source software</strong>.
 Currently, I’m learning <strong>Go (Golang)</strong> and deepening my knowledge of <strong>modern web technologies</strong>.</p>
+<p>Here are the main technologies and tools I have experience with and feel most comfortable using:</p>
+<table>
+  <thead>
+    <tr>
+      <th>Languages</th>
+      <th>Webdev</th>
+      <th>Frameworks</th>
+      <th>Databases</th>
+      <th>Tools</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td data-label="Languages">Java, Go, JS/TS</td>
+      <td data-label="Webdev">HTML, CSS, Svelte, Hugo</td>
+      <td data-label="Frameworks">Spring Boot</td>
+      <td data-label="Databases">MySQL, PostgreSQL, MongoDB</td>
+      <td data-label="Tools">Git, Linux, Docker, VS Code, Vim</td>
+    </tr>
+  </tbody>
+</table>
 <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/marco-antonio-p%C3%A9rez-neira-562b42342/">LinkedIn</a> or <a href="https://www.linkedin.com/in/marco-antonio-p%C3%A9rez-neira-562b42342/">X/Twitter</a>.</p>
 
   
