--- a/public/projects/two-players.org/index.html
+++ b/public/projects/two-players.org/index.html
@@ -48,7 +48,7 @@
 <li>Real-time gameplay with WebSockets</li>
 <li>Clean and responsive interface</li>
 </ul>
-<p><img src="tic-tac-toe.png" alt="A match of tic-tac-toe in two-players.org"></p>
+<p><img src="tic-tac-toe.webp" alt="A match of tic-tac-toe in two-players.org"></p>
 <h3 id="tech-stack">Tech Stack</h3>
 <ul>
 <li>
