css refactor + stack table improvement

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width">
 <title>DCCXXV.DEV</title>
 
-      <link rel="stylesheet" href="/css/main.min.3d35558d6cfb3d3ae95731c6e9b2d11b24cd773da4b2cda667520d36b7337a48.css" integrity="sha256-PTVVjWz7PTrpVzHG6bLRGyTNdz2kss2mZ1INNrczekg=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/css/main.min.9af1f1d87a76559754d033589069084812803a5df5e4dfbfc939c5fa01fa927b.css" integrity="sha256-mvHx2Hp2VZdU0DNYkGkISBKAOl315N&#43;/yTnF&#43;gH6kns=" crossorigin="anonymous">
 
 
         <script src="/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js" integrity="sha256-I80MfYNyY7nq65buLZzPopadqj&#43;gD6HB/ocBqbhyUaE=" crossorigin="anonymous"></script>
@@ -40,25 +40,27 @@
 <p>I’m passionate about <strong>web development</strong>, <strong>backend systems</strong> and <strong>open-source software</strong>.
 Currently, I’m learning <strong>Go (Golang)</strong> and deepening my knowledge of <strong>modern web technologies</strong>.</p>
 <p>Here are the main technologies and tools I have experience with and feel most comfortable using:</p>
-<table>
-  <thead>
-    <tr>
-      <th>Languages</th>
-      <th>Webdev</th>
-      <th>Frameworks</th>
-      <th>Databases</th>
-      <th>Tools</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td data-label="Languages">Java, Go, JS/TS</td>
-      <td data-label="Webdev">HTML, CSS, Svelte, Hugo</td>
-      <td data-label="Frameworks">Spring Boot</td>
-      <td data-label="Databases">MySQL, PostgreSQL, MongoDB</td>
-      <td data-label="Tools">Git, Linux, Docker, VS Code, Vim</td>
-    </tr>
-  </tbody>
+<table aria-label="Technical stack" role="table">
+    <thead>
+        <tr>
+            <th scope="col">Frontend</th>
+            <th scope="col">Backend</th>
+            <th scope="col">Tools</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td data-label="Frontend">
+                HTML, CSS, JavaScript/TypeScript, Svelte, Hugo
+            </td>
+            <td data-label="Backend">
+                Java, Go, Spring Boot, MySQL, PostgreSQL, MongoDB
+            </td>
+            <td data-label="Tools">
+                Git, Linux, Docker, VS Code, Vim
+            </td>
+        </tr>
+    </tbody>
 </table>
 <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/marco-antonio-p%C3%A9rez-neira-562b42342/">LinkedIn</a> or <a href="https://x.com/DCCXXV_">X/Twitter</a>.</p>
 
